src/App.css
* {
  margin: 0;
  padding: 0;
  color: white;
  font-family: "Exo";
}

.App {
  text-align: center;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.menuBar {
  width: 20vw;
  height: 100vh;
  background-color: rgb(5, 5, 5);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.headshot {
  width: 15vw;
  height: 15vw;
  border-radius: 30%;
  margin-top: 3%;

}

.menuButtons {
  width: 100%;
  padding-top: 5%;
  padding-bottom: 5%;
  user-select: none;
  cursor: pointer;
}

.icons {
  display: flex;
  justify-content: center;
  width: 100%;
  padding-top: 7%;
  padding-bottom: 6%;
}

.projectContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 80vw;
  height: 100%;
}

.projects {
  height: 70vh;
  display: flex;
  flex-direction: row;
}

.buttonContainer {
  width: 30vw;
  height: 100%;
}

.buttonPanel {
  width: 100%;
  display: flex;
  justify-content: center;
  user-select: none;
  cursor: pointer;
}

.button {
  padding: 2%;
  margin-bottom: 1vh;
  background-color: rgb(5, 5, 5);
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 3vh;
}

.projectImages {
  height: 100%;
  border-radius: 15px;
}

.projectSkills {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-left: 10%;

}

.displayContainer {
  display: flex;
  flex-direction: row;
  width: 60vw;
}

.displayContainerImagesPhone {
  height: 45vw;
  width: 60%;
}

.displayContainerImagesWeb {
  height: 30vw;
  max-width: 40vw;
  margin-top:  5vh;
}

.displayContainerDescription {
  height: 80vh;
  width: 50%;
}

.displayProjects {
  width: 90%;
  height: auto;
}

.directionButtonsContainer {
  display: flex;
  flex-direction: row;
}

.directionButtons {
  height: 3vh;
  width: 20%;
  margin: 1%;
  background-color: rgb(20, 20, 20);
  font-size: 1.5vh;
}

.image {
  margin-left: -10%;
  position: absolute;
  max-height: 70vh;
  max-width: 30vw;
  transition: 1s ease;
  opacity: 0;
}
.active {
  opacity: 1;
}

.bulletFont {
  font-size: 1.5vw;
}

